updates all the changes

--- a/my-webpage-grid.html
+++ b/my-webpage-grid.html
@@ -55,16 +55,16 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>German</td>
-                            <td>German and English share the same linguistic DNA</td>
+                        <td>English(Hello)</td>
+                        <td>German(Hallo)</td>
                         </tr>
                         <tr class="active-row">
-                            <td>Hebrew</td>
-                            <td>Discover a new side of yourself</td>
+                        <td>English(Thank you)</td>
+                        <td>German(Danke)</td>
                         </tr>
                             <tr>
-                                <td>Latin</td>
-                                <td>It is the language of the Romance languages</td>
+                        <td>English(How are you)</td>
+                        <td>German(Wie geht es dir)</td>
                             </tr>
                     </tbody>
                 </table>
